--- a/front-end/webapp/src/app/modules/auth/routes/password-reset/password-reset.component.html
+++ b/front-end/webapp/src/app/modules/auth/routes/password-reset/password-reset.component.html
@@ -1,58 +1,61 @@
-<app-content width="narrow" >
-
-	<div class="container" *ngIf="!apiResponse">
-		<h1 class="mat-display-1">Definir clave</h1>
-		<h2 class="mat-h2">Ingrese una nueva clave que pueda recordar y evitar que otros la adivinen. No comparta esta clave.</h2>
-		<form [formGroup]="form" (ngSubmit)="submit()">
-			<div class="label-title">
-				<span>Nueva clave</span>
+<app-content width="narrow">
+	<form [formGroup]="form" (ngSubmit)="submit()" *ngIf="!apiResponse">
+		<mat-card>
+			<mat-card-header>
+				<mat-card-title>
+					<span translate="auth.password-reset.form.TITLE"></span>
+				</mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<app-form-input label="auth.password-reset.form.PASSWORD_LABEL">
+					<mat-form-field [floatLabel]="'never'" appearance="outline">
+						<input formControlName="password"
+							type="password"
+							placeholder="{{'auth.password-reset.form.PASSWORD_PLACEHOLDER' | translate }}"
+							matInput
+						>
+						<mat-error *ngIf="hasError('required', 'password')">
+							<span translate="auth.password-reset.form.PASSWORD_REQUIRED"></span>
+						</mat-error>
+					</mat-form-field>
+				</app-form-input>
+				<app-form-input label="auth.password-reset.form.REPASSWORD_LABEL">
+					<mat-form-field [floatLabel]="'never'" appearance="outline">
+						<input formControlName="repassword"
+							type="password"
+							placeholder="{{'auth.password-reset.form.REPASSWORD_PLACEHOLDER' | translate }}"
+							matInput
+						>
+						<mat-error *ngIf="hasError('required', 'repassword')">
+							<span translate="auth.password-reset.form.REPASSWORD_REQUIRED"></span>
+						</mat-error>
+						<mat-error *ngIf="hasError('notEquivalent', 'repassword')">
+							<span translate="auth.password-reset.form.REPASSWORD_NOTEQUIVALENT"></span>
+						</mat-error>
+					</mat-form-field>
+				</app-form-input>
+			</mat-card-content>
+			<mat-card-actions>
+				<button mat-button type="submit" translate="auth.login.form.SUBMIT"></button>
+			</mat-card-actions>
+		</mat-card>
+	</form>
+	<mat-card *ngIf="apiResponse">
+		<mat-card-header>
+			<mat-card-title>
+				<span translate="auth.password-reset.result.TITLE"></span>
+			</mat-card-title>
+		</mat-card-header>
+		<mat-card-content>
+			<mat-progress-bar mode="indeterminate" *ngIf="apiResponse.loading"></mat-progress-bar>
+			<div class="container" *ngIf="apiResponse.data">
+				<h3 class="mat-h3" translate="auth.password-reset.result.OK"></h3>
+				<h2 class="mat-h2"><code>{{apiResponse.data.email}}</code></h2>
 			</div>
-			<mat-form-field [floatLabel]="'never'">
-				<input id="password"
-					type="password"
-					formControlName="password"
-					placeholder="Ingrese una nueva clave"
-					matInput
-				>
-				<mat-error *ngIf="hasError('required', 'password')">
-					Debe especificar una clave
-				</mat-error>
-			</mat-form-field>
-
-			<div class="label-title">
-				<span>Confirmar clave</span>
+			<div class="container" *ngIf="apiResponse.error">
+				<h3 class="mat-h3" translate="auth.password-reset.result.ERROR"></h3>
+				<h3 class="mat-h2">{{apiResponse.error.text}}</h3>
 			</div>
-			<mat-form-field [floatLabel]="'never'">
-				<input id="repassword"
-					type="password"
-					formControlName="repassword"
-					placeholder="Vuelva a ingresar la nueva clave"
-					matInput
-				>
-				<mat-error *ngIf="hasError('required', 'repassword')">
-					Debe reingresar la clave
-				</mat-error>
-				<mat-error *ngIf="hasError('notEquivalent', 'repassword')">
-					Deben coincidir las claves
-				</mat-error>
-			</mat-form-field>
-			<div class="button-container">
-				<button mat-button class="button-continuar" type="submit">
-					Guardar
-				</button>
-			</div>
-		</form>
-	</div>
-	<div *ngIf="apiResponse">
-		<mat-progress-bar mode="indeterminate" *ngIf="apiResponse.loading"></mat-progress-bar>
-		<div class="container" *ngIf="apiResponse.data">
-			<h1 class="mat-display-1">Clave nueva</h1>
-			<h2 class="mat-h2">Se definió correctamente la clave para el usuario</h2>
-			<h2 class="mat-h2"><code>{{apiResponse.data.email}}</code></h2>
-		</div>
-		<div class="container" *ngIf="apiResponse.error">
-			<h1 class="mat-display-1">Error al definir clave</h1>
-			<h2 class="mat-h2">{{apiResponse.error.text}}</h2>
-		</div>
-	</div>
+		</mat-card-content>
+	</mat-card>
 </app-content>
