--- a/front-end/webapp/src/app/modules/internacion/dialogs/concepts-search-dialog/concepts-search-dialog.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/concepts-search-dialog/concepts-search-dialog.component.scss
@@ -1,3 +1,11 @@
+div.spinner {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 100%;
+}
+
 div.mat-h1::first-letter {
 	text-transform: uppercase;
 }
