tg-209 homologar secciones con busqueda de snomed

--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -49,6 +49,12 @@
 		}
 		&.secondary {
 			border-collapse: collapse;
+			th, td {
+				text-align: left;
+				&:first-child {
+					padding-left: 24px;
+				}
+			}
 			thead {
 				background-color: #F0F0F0;
 				th {
