--- a/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/antecentes-personales/antecentes-personales.component.html
@@ -1,11 +1,18 @@
 <h2 class="mat-h2" [translate]="'internaciones.anamnesis.antecedentes-personales.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [text]="'internaciones.anamnesis.antecedentes-personales.PROBLEM_TYPE'"
+		<app-concepts-search [label]="'internaciones.anamnesis.antecedentes-personales.PROBLEM_TYPE'"
 			(onSelect)=setConcept($event)>
 		</app-concepts-search>
 
 		<form [formGroup]="form" (ngSubmit)="addToList()">
+			<mat-form-field appearance="outline">
+				<mat-label [translate]="'internaciones.anamnesis.antecedentes-personales.PROBLEM_TYPE'">
+				</mat-label>
+				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
+				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
+				</mat-error>
+			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'internaciones.anamnesis.antecedentes-personales.form.CLINICAL_STATUS'">
 				</mat-label>
@@ -14,7 +21,7 @@
 						{{status.description}}
 					</mat-option>
 				</mat-select>
-				<mat-error [translate]="'internaciones.anamnesis.antecedentes-personales.form.REQUIRED'">
+				<mat-error [translate]="'forms.REQUIRED'">
 				</mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
@@ -25,7 +32,7 @@
 						{{verification.description}}
 					</mat-option>
 				</mat-select>
-				<mat-error [translate]="'internaciones.anamnesis.antecedentes-personales.form.REQUIRED'">
+				<mat-error [translate]="'forms.REQUIRED'">
 				</mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
@@ -37,7 +44,7 @@
 				<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
 					(monthSelected)="chosenMonthHandler($event)">
 				</mat-datepicker>
-				<mat-error [translate]="'internaciones.anamnesis.antecedentes-personales.form.REQUIRED'">
+				<mat-error [translate]="'forms.REQUIRED'">
 				</mat-error>
 			</mat-form-field>
 
@@ -46,12 +53,12 @@
 				<textarea matInput type="text" id="note" name="note" formControlName="note"
 					placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
 					</textarea>
-				<mat-error [translate]="'internaciones.anamnesis.antecedentes-personales.form.REQUIRED'">
+				<mat-error [translate]="'forms.REQUIRED'">
 				</mat-error>
 			</mat-form-field>
 			<div align="end">
 				<button mat-raised-button color="primary" type="submit">
-					<span [translate]="'internaciones.anamnesis.antecedentes-personales.ADD'"></span>
+					<span class="uppercase" [translate]="'internaciones.anamnesis.antecedentes-personales.ADD'"></span>
 				</button>
 			</div>
 		</form>
@@ -69,8 +76,8 @@
 
 		<ng-container matColumnDef="remove">
 			<th mat-header-cell *matHeaderCellDef></th>
-			<td mat-cell *matCellDef="let element">
-				<button mat-icon-button color="warn" (click)="remove(element)">
+			<td mat-cell *matCellDef="let element; index as i">
+				<button mat-icon-button color="warn" (click)="remove(i)">
 					<mat-icon>delete_outline</mat-icon>
 				</button>
 			</td>
