--- a/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
@@ -1,9 +1,16 @@
 <h2 class="mat-h2" [translate]="'internaciones.anamnesis.diagnosticos.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [text]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
+		<app-concepts-search [label]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
 		</app-concepts-search>
 		<form [formGroup]="form" (ngSubmit)="addToList()">
+			<mat-form-field appearance="outline">
+				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'">
+				</mat-label>
+				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
+				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
+				</mat-error>
+			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.form.CLINICAL_STATUS'">
 				</mat-label>
@@ -12,6 +19,8 @@
 						{{status.description}}
 					</mat-option>
 				</mat-select>
+				<mat-error [translate]="'forms.REQUIRED'">
+				</mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.form.VERIFICATION_STATUS'">
@@ -21,10 +30,12 @@
 						{{verification.description}}
 					</mat-option>
 				</mat-select>
+				<mat-error [translate]="'forms.REQUIRED'">
+				</mat-error>
 			</mat-form-field>
 
 			<div align="end">
-				<button mat-raised-button color="primary" type="submit">
+				<button class="uppercase" mat-raised-button color="primary" type="submit">
 					<span [translate]="'internaciones.anamnesis.diagnosticos.ADD'"></span>
 				</button>
 			</div>
@@ -43,8 +54,8 @@
 
 		<ng-container matColumnDef="remove">
 			<th mat-header-cell *matHeaderCellDef></th>
-			<td mat-cell *matCellDef="let element">
-				<button mat-icon-button color="warn" (click)="remove(element)">
+			<td mat-cell *matCellDef="let element; index as i">
+				<button mat-icon-button color="warn" (click)="remove(i)">
 					<mat-icon>delete_outline</mat-icon>
 				</button>
 			</td>
