--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
@@ -7,6 +7,9 @@
 		margin: 1vh 0;
 	}
 	form {
+		mat-card.datos-antropometricos-card {
+			width: 50%;
+		}
 		mat-form-field {
 			width: 100%;
 		}
