tg-208 add seccion alergias

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -49,6 +49,9 @@
 		<section id="antecedentes-personales">
 			<app-antecentes-personales></app-antecentes-personales>
 		</section>
+		<section id="alergias">
+			<app-alergias></app-alergias>
+		</section>
 		<section id="observations">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
