tg-211 add seccion vacunas + renombres varios

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -52,6 +52,9 @@
 		<section id="alergias">
 			<app-alergias></app-alergias>
 		</section>
+		<section id="vacunas">
+			<app-vacunas></app-vacunas>
+		</section>
 		<section id="observations">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
