--- a/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
@@ -1,21 +1,21 @@
-<h2 class="mat-h2" [translate]="'internaciones.anamnesis.diagnosticos.TITLE'"></h2>
+<h2 class="mat-h2" [translate]="'internaciones.anamnesis.vacunas.TITLE'"></h2>
 <mat-card>
 	<mat-card-content>
-		<app-concepts-search [label]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
+		<app-concepts-search [label]="'internaciones.anamnesis.vacunas.PROBLEM_TYPE'" (onSelect)=setConcept($event)>
 		</app-concepts-search>
 		<form [formGroup]="form" (ngSubmit)="addToList()">
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.PROBLEM_TYPE'">
+				<mat-label [translate]="'internaciones.anamnesis.vacunas.PROBLEM_TYPE'">
 				</mat-label>
 				<input matInput type="text" formControlName="snomed" name="snomed" readonly>
 				<mat-error [translate]="'internaciones.anamnesis.REQUIRED_SEARCH'">
 				</mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.form.CLINICAL_STATUS'">
+				<mat-label [translate]="'internaciones.anamnesis.vacunas.form.CLINICAL_STATUS'">
 				</mat-label>
 				<mat-select formControlName="statusId" name="statusId">
-					<mat-option *ngFor="let status of clinicalStatus" [value]="status.id">
+					<mat-option *ngFor="let status of inmunizationStatus" [value]="status.id">
 						{{status.description}}
 					</mat-option>
 				</mat-select>
@@ -23,20 +23,28 @@
 				</mat-error>
 			</mat-form-field>
 			<mat-form-field appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.diagnosticos.form.VERIFICATION_STATUS'">
+				<mat-label [translate]="'internaciones.anamnesis.vacunas.form.REGISTRY_DATE'">
 				</mat-label>
-				<mat-select formControlName="verificationId" name="verificationId">
-					<mat-option *ngFor="let verification of verifications" [value]="verification.id">
-						{{verification.description}}
-					</mat-option>
-				</mat-select>
+				<input matInput readonly id="date" [matDatepicker]="myDatepicker" formControlName="date"
+					[max]="this.today">
+				<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+				<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
+					(monthSelected)="chosenMonthHandler($event)">
+				</mat-datepicker>
 				<mat-error [translate]="'forms.REQUIRED'">
 				</mat-error>
 			</mat-form-field>
-
+			<mat-form-field appearance="outline">
+				<mat-label [translate]="'internaciones.anamnesis.vacunas.form.NOTE'"></mat-label>
+				<textarea matInput type="text" id="note" name="note" formControlName="note"
+					placeholder="{{'internaciones.anamnesis.observations.DESCRIPTION' | translate }}">
+					</textarea>
+				<mat-error [translate]="'forms.REQUIRED'">
+				</mat-error>
+			</mat-form-field>
 			<div align="end">
 				<button class="uppercase" mat-raised-button color="primary" type="submit">
-					<span [translate]="'internaciones.anamnesis.diagnosticos.ADD'"></span>
+					<span [translate]="'internaciones.anamnesis.vacunas.ADD'"></span>
 				</button>
 			</div>
 		</form>
@@ -44,7 +52,7 @@
 </mat-card>
 
 <section>
-	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.diagnosticos.table.TITLE'"></h3>
+	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.vacunas.table.TITLE'"></h3>
 	<table mat-table [dataSource]="dataSource" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
