--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -55,6 +55,9 @@
 		<section id="vacunas">
 			<app-vacunas></app-vacunas>
 		</section>
+		<section id="medicacion">
+			<app-medicacion></app-medicacion>
+		</section>
 		<section id="observations">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
