tg-214 add seccion antecedentes familiares fix nombre componente antecedentes personales

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -47,7 +47,10 @@
 			</mat-card>
 		</section>
 		<section id="antecedentes-personales">
-			<app-antecentes-personales></app-antecentes-personales>
+			<app-antecedentes-personales></app-antecedentes-personales>
+		</section>
+		<section id="antecedentes-familiares">
+			<app-antecedentes-familiares></app-antecedentes-familiares>
 		</section>
 		<section id="alergias">
 			<app-alergias></app-alergias>
