tg-33 Agregar popup al seleccionar una fila en tabla de resultados parciales

--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -113,7 +113,8 @@
 	</section>
 	<div class="container" *ngIf="!viewSearchComponent() && !showSpinner()">
 		<section>
-			<h3 class="mat-body-2" [translate]="'Pacientes Coincidentes'"></h3>
+			<h2 class="mat-body-2" [translate]="'Búsqueda de pacientes'"></h2>
+			<h3 class="mat-body-2" [translate]="'Se encontraron posibles coincidencias.'"></h3>
 			<app-table [model]="matchingPatient" [tableClass]="'primary mat-elevation-z8'"></app-table>
 		</section>
 	</div>
