--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.scss
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.scss
@@ -13,4 +13,9 @@
 	.mat-form-field + .mat-form-field {
 		@include form-field;
 	}
+
+	.mat-action-row {
+		@include form-buttons;
+		margin-top: 25px;
+	}
 }
