tg-213 agrega signos vitales y tabla datos antropometricos a anamnesis-form

--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
@@ -32,5 +32,23 @@
 				}
 			}
 		}
+
+		.vital-signs {
+
+			.field-container {
+				display: flex;
+				flex-direction: column;
+				mat-form-field {
+					width: 90%;
+				}
+			}
+
+			.row-container {
+				display: flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				align-items: flex-end;
+			}
+		}
 	}
 }
