--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-	<form [formGroup]="form" (ngSubmit)="save()">
-		<section>
+	<form id="anamnesis-form" [formGroup]="form" (ngSubmit)="save()">
+		<section id="title">
 			<h2 class="page-title" [translate]="'internaciones.anamnesis.TITLE'"></h2>
 			<h3 [translate]="'internaciones.anamnesis.SUBTITLE'"></h3>
 		</section>
@@ -10,7 +10,7 @@
 		<section id="datos-antropometricos">
 			<h2 [translate]="'internaciones.anamnesis.datos-antropometricos.TITLE'"></h2>
 			<mat-card class="datos-antropometricos-card">
-				<mat-card-content>
+				<mat-card-content formGroupName="anthropometricData">
 					<div>
 						<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.BLOOD_TYPE'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -24,7 +24,7 @@
 					<div>
 						<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<input id="middleNames"
+							<input id="height"
 							name="height"
 							formControlName="height"
 							placeholder="Ej: 180"
@@ -35,7 +35,7 @@
 					<div>
 						<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<input id="middleNames"
+							<input id="weight"
 							name="weight"
 							formControlName="weight"
 							placeholder="Ej: 70"
@@ -45,6 +45,24 @@
 					</div>
 				</mat-card-content>
 			</mat-card>
+
+			<section>
+				<h3 class="mat-h2" [translate]="'internaciones.anamnesis.datos-antropometricos.table.TITLE'"></h3>
+				<table id="datos-antropometricos-table" mat-table [dataSource]="datosAntropometricosTable.dataSource" class="secondary">
+
+					<ng-container *ngFor="let column of datosAntropometricosTable.columns" [matColumnDef]="column.def">
+						<th *matHeaderCellDef>{{ column.header | translate }}</th>
+						<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					</ng-container>
+
+					<tr mat-header-row *matHeaderRowDef="datosAntropometricosTable.displayedColumns"></tr>
+					<tr mat-row *matRowDef="let row; columns: datosAntropometricosTable.displayedColumns;"></tr>
+				</table>
+				<div class="mat-h3 table-no-data" *ngIf="datosAntropometricosTable.dataSource.data.length === 0">
+					<span [translate]="'messages.NO_DATA'"></span>
+				</div>
+			</section>
+
 		</section>
 		<section id="antecedentes-personales">
 			<app-antecedentes-personales></app-antecedentes-personales>
@@ -61,10 +79,123 @@
 		<section id="medicacion">
 			<app-medicacion></app-medicacion>
 		</section>
+		<section id="signos-vitales">
+			<h2 [translate]="'internaciones.anamnesis.vital-signs.form.TITLE'"></h2>
+			<mat-card>
+				<mat-card-content class="vital-signs" formGroupName="vitalSigns">
+					<div class="row-container">
+						<div class="field-container">
+							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.HEART_RATE'"></mat-label>
+							<mat-form-field [floatLabel]="'never'" appearance="outline">
+								<input id="heart_rate"
+									   name="heart_rate"
+									   formControlName="heartRate"
+									   placeholder="00"
+									   type="number"
+									   matInput>
+								<mat-error [translate]="'forms.REQUIRED'">
+								</mat-error>
+							</mat-form-field>
+						</div>
+						<div class="field-container">
+							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.RESPIRATORY_RATE'"></mat-label>
+							<mat-form-field [floatLabel]="'never'" appearance="outline">
+								<input id="respiratory_rate"
+									   name="respiratory_rate"
+									   formControlName="respiratoryRate"
+									   placeholder="00"
+									   type="number"
+									   matInput>
+								<mat-error [translate]="'forms.REQUIRED'">
+								</mat-error>
+							</mat-form-field>
+						</div>
+					</div>
+
+					<div class="row-container">
+						<div class="field-container">
+							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.TEMPERATURE'"></mat-label>
+							<mat-form-field [floatLabel]="'never'" appearance="outline">
+								<input id="temperature"
+									   name="temperature"
+									   formControlName="temperature"
+									   placeholder="00.0"
+									   type="number"
+									   matInput>
+								<mat-error [translate]="'forms.REQUIRED'">
+								</mat-error>
+							</mat-form-field>
+						</div>
+						<div class="field-container">
+							<mat-label
+								[translate]="'internaciones.anamnesis.vital-signs.form.BLOOD_OXIGEN_SATURATION'"></mat-label>
+							<mat-form-field [floatLabel]="'never'" appearance="outline">
+								<input id="blood_oxigen_saturation"
+									   name="blood_oxigen_saturation"
+									   formControlName="bloodOxigenSaturation"
+									   placeholder="00"
+									   type="number"
+									   matInput>
+								<mat-error [translate]="'forms.REQUIRED'">
+								</mat-error>
+							</mat-form-field>
+						</div>
+					</div>
+
+					<div class="row-container">
+						<div class="field-container">
+							<mat-label
+								[translate]="'internaciones.anamnesis.vital-signs.form.BLOOD_PRESURE'"></mat-label>
+							<mat-form-field [floatLabel]="'never'" appearance="outline">
+								<input id="systolic_blood_pressure"
+									   name="systolicBloodPressure"
+									   formControlName="systolicBloodPressure"
+									   placeholder="00"
+									   type="number"
+									   matInput>
+								<mat-error [translate]="'forms.REQUIRED'">
+								</mat-error>
+							</mat-form-field>
+						</div>
+						<div class="field-container">
+							<mat-form-field [floatLabel]="'never'" appearance="outline">
+								<input id="diastolic_blood_pressure"
+									   name="diastolicBloodPressure"
+									   formControlName="diastolicBloodPressure"
+									   placeholder="00"
+									   type="number"
+									   matInput>
+								<mat-error [translate]="'forms.REQUIRED'">
+								</mat-error>
+							</mat-form-field>
+						</div>
+					</div>
+				</mat-card-content>
+			</mat-card>
+			<section>
+				<h3 class="mat-h2" [translate]="'internaciones.anamnesis.vital-signs.table.TITLE'"></h3>
+				<table id="signos-vitales-table" mat-table [dataSource]="vitalSignsTable.dataSource" class="secondary">
+
+					<ng-container *ngFor="let column of vitalSignsTable.columns" [matColumnDef]="column.def">
+						<th *matHeaderCellDef>{{ column.header | translate }}</th>
+						<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					</ng-container>
+
+					<tr mat-header-row *matHeaderRowDef="vitalSignsTable.displayedColumns"></tr>
+					<tr mat-row *matRowDef="let row; columns: vitalSignsTable.displayedColumns;"></tr>
+				</table>
+				<div class="mat-h3 table-no-data" *ngIf="vitalSignsTable.dataSource.data.length === 0">
+					<span [translate]="'messages.NO_DATA'"></span>
+				</div>
+			</section>
+
+
+
+		</section>
 		<section id="observations">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
-				<mat-card-content>
+				<mat-card-content formGroupName="observations">
 					<div>
 						<mat-label [translate]="'internaciones.anamnesis.observations.CURRENT_DISEASE'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
@@ -118,16 +249,16 @@
 			</mat-card>
 			<div class="form-buttons">
 				<div class="buttons">
-					<button mat-stroked-button color="primary">
+					<button mat-stroked-button type="button" color="primary">
 						<span class="uppercase" (click)="back()">Volver</span>
 					</button>
-					<button mat-stroked-button color="primary">
+					<button mat-stroked-button type="button" color="primary">
 						<span class="uppercase">Guardar borrador</span>
 					</button>
 				</div>
 				<div class="firma-buttons">
 					<mat-checkbox>Adjuntar firma digital</mat-checkbox>
-					<button mat-raised-button color="primary" type="submit">
+					<button mat-raised-button type="submit" color="primary">
 						<span class="uppercase">Firmar y Confirmar</span>
 					</button>
 				</div>
