--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -12,18 +12,18 @@
 			<mat-card class="datos-antropometricos-card">
 				<mat-card-content formGroupName="anthropometricData">
 					<div>
-						<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.BLOOD_TYPE'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<mat-select formControlName="bloodType" name="bloodTypeId">
-								<mat-option *ngFor="let bloodType of bloodTypes" [value]="bloodType.id">
+							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.BLOOD_TYPE'"></mat-label>
+							<mat-select placeholder="B+" formControlName="bloodType" name="bloodTypeId">
+								<mat-option *ngFor="let bloodType of bloodTypes" [value]="bloodType">
 									{{ bloodType.description }}
 								</mat-option>
 							</mat-select>
 						</mat-form-field>
 					</div>
 					<div>
-						<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
+							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
 							<input id="height"
 							name="height"
 							formControlName="height"
@@ -33,8 +33,8 @@
 						</mat-form-field>
 					</div>
 					<div>
-						<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
+							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
 							<input id="weight"
 							name="weight"
 							formControlName="weight"
@@ -201,7 +201,9 @@
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<textarea matInput type="text" id="current_disease" name="current_disease"
 								formControlName="current_disease">
-										</textarea>
+							</textarea>
+							<mat-error [translate]="'forms.REQUIRED'">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div>
@@ -211,6 +213,8 @@
 							<textarea matInput type="text" id="physical_examination" name="physical_examination"
 								formControlName="physical_examination">
 							</textarea>
+							<mat-error [translate]="'forms.REQUIRED'">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div>
@@ -219,6 +223,8 @@
 							<textarea matInput type="text" id="studies_procedures" name="studies_procedures"
 								formControlName="studies_procedures">
 							</textarea>
+							<mat-error [translate]="'forms.REQUIRED'">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div>
@@ -227,6 +233,8 @@
 							<textarea matInput type="text" id="patient_progress" name="patient_progress"
 								formControlName="patient_progress">
 							</textarea>
+							<mat-error [translate]="'forms.REQUIRED'">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div>
@@ -235,6 +243,8 @@
 							<textarea matInput type="text" id="clinical_impression" name="clinical_impression"
 								formControlName="clinical_impression">
 							</textarea>
+							<mat-error [translate]="'forms.REQUIRED'">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div>
