tg-66 perfil de paciente - estructura y redireccionamiento desde busqueda rapida

--- a/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -1,8 +1,8 @@
-
 <app-content width="full">
 	<section>
-		<h2 class="page-title" [translate]="'pacientes.home.TITLE'"></h2>
 		<app-patient-card [patient]="patient$ | async">
+			<div content>
+			</div>
 		</app-patient-card>
 	</section>
 </app-content>
