--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -55,6 +55,15 @@
 						<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
 					</ng-container>
 
+					<ng-container matColumnDef="remove">
+						<th mat-header-cell *matHeaderCellDef></th>
+						<td mat-cell *matCellDef="let element; index as i">
+							<button type="button" mat-icon-button color="warn" (click)="remove(datosAntropometricos, datosAntropometricosTable.dataSource, i)">
+								<mat-icon>delete_outline</mat-icon>
+							</button>
+						</td>
+					</ng-container>
+
 					<tr mat-header-row *matHeaderRowDef="datosAntropometricosTable.displayedColumns"></tr>
 					<tr mat-row *matRowDef="let row; columns: datosAntropometricosTable.displayedColumns;"></tr>
 				</table>
@@ -179,6 +188,15 @@
 					<ng-container *ngFor="let column of vitalSignsTable.columns" [matColumnDef]="column.def">
 						<th *matHeaderCellDef>{{ column.header | translate }}</th>
 						<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					</ng-container>
+
+					<ng-container matColumnDef="remove">
+						<th mat-header-cell *matHeaderCellDef></th>
+						<td mat-cell *matCellDef="let element; index as i">
+							<button type="button" mat-icon-button color="warn" (click)="remove(vitalSigns, vitalSignsTable.dataSource, i)">
+								<mat-icon>delete_outline</mat-icon>
+							</button>
+						</td>
 					</ng-container>
 
 					<tr mat-header-row *matHeaderRowDef="vitalSignsTable.displayedColumns"></tr>
