tg-228 ajustes en componente tabla agrega componente para no hay información agrega card diagnósticos en ficha de internación

--- a/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/internaciones-table/internaciones-table.component.html
@@ -1,4 +1,4 @@
 <app-table
 	[model]="internacionesTable"
-	[tableClass]="'mat-elevation-z8'">
+	[tableClass]="'primary mat-elevation-z8'">
 </app-table>
