--- a/front-end/webapp/src/assets/styles/theme.scss
+++ b/front-end/webapp/src/assets/styles/theme.scss
@@ -15,3 +15,4 @@ $theme: mat-light-theme($primary, $accent);
 @include mat-card-box($theme);
 @include mat-dialog($theme);
 @include mat-button($theme);
+@include no-data($theme);
