--- a/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/vacunas/vacunas.component.html
@@ -72,7 +72,5 @@
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
-	<div class="mat-h3 table-no-data" *ngIf="dataSource.data.length === 0">
-		<span [translate]="'messages.NO_DATA'"></span>
-	</div>
+	<app-no-data class="table" *ngIf="dataSource.data.length === 0"></app-no-data>
 </section>
