--- a/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/pacientes-table/pacientes-table.component.html
@@ -1,1 +1,1 @@
-<app-table [model]="allPatient" [tableClass]="'mat-elevation-z8'"></app-table>
+<app-table [model]="allPatient" [tableClass]="'primary mat-elevation-z8'"></app-table>
