--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -114,7 +114,7 @@
 	<div class="container" *ngIf="!viewSearchComponent() && !showSpinner()">
 		<section>
 			<h3 class="mat-body-2" [translate]="'Pacientes Coincidentes'"></h3>
-			<app-table [model]="matchingPatient" [tableClass]="'mat-elevation-z8'"></app-table>
+			<app-table [model]="matchingPatient" [tableClass]="'primary mat-elevation-z8'"></app-table>
 		</section>
 	</div>
 </app-content>
