--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -17,6 +17,19 @@
 	}
 }
 
+@mixin no-data($theme) {
+	$accent-palette: map-get($theme, accent);
+	app-no-data {
+		div.no-data {
+			padding: 20px 0;
+			text-align: center;
+			font-weight: bold;
+			background-color: white;
+			color: mat-color($accent-palette, default);
+		}
+	}
+}
+
 @mixin mat-table($theme) {
 	$primary-palette: map-get($theme, primary);
 	$accent-palette: map-get($theme, accent);
@@ -27,24 +40,27 @@
 		}
 	}
 
-	div.table-no-data {
-		padding: 20px 0;
-		margin-top: -1px;
-		border: solid 1px #A8A8A8;
-		text-align: center;
-		font-weight: bold;
-		background-color: white;
-		color: mat-color($accent-palette, default);
+	app-no-data.table {
+		div.no-data {
+			margin-top: -1px;
+			border: solid 1px #A8A8A8;
+		}
 	}
 
 	table.mat-table {
 		width: 100%;
-		text-align: center;
-		thead {
-			background-color: mat-color($primary-palette, default);
-			th {
-				text-align: center;
-				color: mat-color($primary, default-contrast);
+		th, td {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+		&.primary {
+			text-align: center;
+			thead {
+				background-color: mat-color($primary-palette, default);
+				th {
+					text-align: center;
+					color: mat-color($primary, default-contrast);
+				}
 			}
 		}
 		&.secondary {
