tg-228 fix no-data en ficha de diagnostricos de internacion

--- a/front-end/webapp/src/app/modules/internacion/components/diagnosis-summary/diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosis-summary/diagnosis-summary.component.html
@@ -1,3 +1,4 @@
 <app-summary-card [header]="diagnosticosSummary">
-	<app-table [model]="tableModel"></app-table>
+	<app-table [model]="tableModel" *ngIf="tableModel?.data.length > 0"></app-table>
+	<app-no-data *ngIf="tableModel?.data.length === 0"></app-no-data>
 </app-summary-card>
