tg-246 class page para elemento section en css

--- a/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -1,5 +1,5 @@
 <app-content width="full">
-	<section>
+	<section class="page">
 		<h2 class="page-title" [translate]="'pacientes.new.TITLE'"></h2>
 		<h3 [translate]="'pacientes.new.SUBTITLE'"></h3>
 		<form [formGroup]="form" (ngSubmit)="save()">
