--- a/front-end/webapp/src/app/modules/internacion/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
@@ -6,7 +6,7 @@
 </div>
 <div mat-dialog-content>
 	<div class="spinner">
-		<mat-spinner color="accent" *ngIf="!conceptsResultsTable"></mat-spinner>
+		<mat-spinner color="primary" *ngIf="!conceptsResultsTable"></mat-spinner>
 	</div>
 	<app-table [model]="conceptsResultsTable" [tableClass]="'secondary'"></app-table>
 </div>
