--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -18,14 +18,14 @@
 }
 
 @mixin no-data($theme) {
-	$accent-palette: map-get($theme, accent);
+	$palette: map-get($theme, primary);
 	app-no-data {
 		div.no-data {
 			padding: 20px 0;
 			text-align: center;
 			font-weight: bold;
 			background-color: white;
-			color: mat-color($accent-palette, default);
+			color: mat-color($palette, default);
 		}
 	}
 }
@@ -88,7 +88,7 @@
 }
 
 @mixin mat-card-box($theme) {
-	$accent-palette: map-get($theme, accent);
+	$palette: map-get($theme, primary);
 
 	mat-card.box {
 		padding: 0;
@@ -96,8 +96,8 @@
 			padding: 10px;
 			border-top-left-radius: 4px;
 			border-top-right-radius: 4px;
-			background-color: mat-color($accent-palette, default);
-			color: mat-color($accent, default-contrast);
+			background-color: mat-color($palette, 300);
+			color: mat-contrast($palette, 400);
 			& div.mat-card-header-text {
 				align-self: center;
 				mat-card-title.mat-card-title {
