--- a/front-end/webapp/src/assets/styles/palettes.scss
+++ b/front-end/webapp/src/assets/styles/palettes.scss
@@ -1,57 +1,24 @@
 $primary-palette: (
-	50 : #eaeaf0,
-	100 : #cacbda,
-	200 : #a7a8c1,
-	300 : #8385a8,
-	400 : #696a96,
-	500 : #4e5083,
-	600 : #47497b,
-	700 : #3d4070,
-	800 : #353766,
-	900 : #252753,
-	A100 : #999eff,
-	A200 : #666dff,
-	A400 : #333cff,
-	A700 : #1a24ff,
-	contrast: (
-		50 : #000000,
-		100 : #000000,
-		200 : #000000,
-		300 : #000000,
-		400 : #ffffff,
-		500 : #ffffff,
-		600 : #ffffff,
-		700 : #ffffff,
-		800 : #ffffff,
-		900 : #ffffff,
-		A100 : #000000,
-		A200 : #ffffff,
-		A400 : #ffffff,
-		A700 : #ffffff,
-	)
-);
-
-$accent-palette: (
-    50 : #eeeef3,
-    100 : #d4d5e1,
-    200 : #b8b9cd,
-    300 : #9b9cb9,
-    400 : #8587aa,
-    500 : #70729b,
-    600 : #686a93,
-    700 : #5d5f89,
-    800 : #53557f,
-    900 : #41426d,
-    A100 : #c6c7ff,
-    A200 : #9395ff,
-    A400 : #6064ff,
-    A700 : #474bff,
+    50 : #e0eef7,
+    100 : #b3d5eb,
+    200 : #80b9dd,
+    300 : #4d9ccf,
+    400 : #2687c5,
+    500 : #0072bb,
+    600 : #006ab5,
+    700 : #005fac,
+    800 : #0055a4,
+    900 : #004296,
+    A100 : #c1d8ff,
+    A200 : #8eb7ff,
+    A400 : #5b97ff,
+    A700 : #4187ff,
     contrast: (
         50 : #000000,
         100 : #000000,
         200 : #000000,
         300 : #000000,
-        400 : #000000,
+        400 : #ffffff,
         500 : #ffffff,
         600 : #ffffff,
         700 : #ffffff,
@@ -59,7 +26,39 @@ $accent-palette: (
         900 : #ffffff,
         A100 : #000000,
         A200 : #000000,
-        A400 : #ffffff,
+        A400 : #000000,
         A700 : #ffffff,
+    )
+);
+$accent-palette: (
+    50 : #eaf6f5,
+    100 : #cae8e6,
+    200 : #a7d8d6,
+    300 : #84c8c5,
+    400 : #69bdb8,
+    500 : #4fb1ac,
+    600 : #48aaa5,
+    700 : #3fa19b,
+    800 : #369892,
+    900 : #268882,
+    A100 : #c9fffc,
+    A200 : #96fff9,
+    A400 : #63fff5,
+    A700 : #49fff4,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
     )
 );
